[gd_scene load_steps=14 format=2]

[ext_resource path="res://Shapes/4_blocks/I_Shape.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shapes/4_blocks/J_Shape.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shapes/4_blocks/Z_Shape.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shapes/4_blocks/T_Shape.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shapes/4_blocks/S_Shape.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shapes/4_blocks/L_Shape.tscn" type="PackedScene" id=6]
[ext_resource path="res://Shapes/4_blocks/O_Shape.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/EditableGrid.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/ShapeLoader.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Tools/QuantizedTimer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/BlockController.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Demos/Scripts/FallingDemo.gd" type="Script" id=13]

[node name="FallingDemo" type="Node2D"]
script = ExtResource( 13 )

[node name="ShapeLoader" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, 1 )
target = NodePath("../EditableGrid/BlockController")
outline_container = NodePath("../EditableGrid/Outlines")
spawn_cell = Vector2( 5, 2 )
shapes = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 1 ) ]

[node name="EditableGrid" parent="." instance=ExtResource( 8 )]
position = Vector2( 50, 30 )

[node name="BlockController" parent="EditableGrid" instance=ExtResource( 11 )]
position = Vector2( 140, 60 )

[node name="Block" parent="EditableGrid" instance=ExtResource( 12 )]
position = Vector2( 20, 300 )

[node name="Outlines" type="Node2D" parent="EditableGrid"]

[node name="QuantizedTimer" parent="." instance=ExtResource( 10 )]
ticks_per_minute = 60

[connection signal="on_step" from="QuantizedTimer" to="." method="_on_QuantizedTimer_step"]
